spacing bug and added bottom highlight for navbar buttons

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -249,6 +249,8 @@ body {
     color: var(--navbar-font-color); */
     background: #f2f2f2;
     color: #fc6c04;
+    border-bottom: 2px solid;
+    border-bottom-color: #fc6c04;
   }
 
   .navbar-end .navbar-link::after {
